--- a/app.json
+++ b/app.json
@@ -48,6 +48,8 @@
     }
   }],
   "buildpacks": [{
+    "url": "https://github.com/iq-thon/heroku-buildpack-ffmpeg-latest" 
+  },{    
     "url":"https://github.com/heroku/heroku-buildpack-google-chrome"
   },{
     "url":"https://github.com/heroku/heroku-buildpack-chromedriver"
