--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "The original Arab Telethon source",
-  "description": "Welcome to the Arab Telethon 8.1v { @iqthon }",
+  "name": "Original Arab Telethon Source 8.3 V",
+  "description": "8.3 V { @iqthon }",
   "logo": "https://telegra.ph/file/795bd80cbb23748657b4c.jpg",
   "keywords": ["plugin","modular","productivity"],
   "repository": "https://github.com/help-iq2/telethon",
